--- a/index.html
+++ b/index.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
-    <title>严振杰</title>
-</head>
-<body>
-<p>我叫严振杰，软件工程师，英文名Yolanda，尤兰达，他们叫我达哥。</P>
-</body>
-</html>
+---
+layout: post_listing
+permalink: /
+---
