--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Liang Sikai</title>
 </head>
 <body>
-...
+<aside class="sidebar" role="note" style="background-image:url(http://redvi.github.io/voyager/assets/images/rails.jpg)">
+
 </body>
 </html>
