--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <aside class="sidebar" role="note" style="background-image:url(http://redvi.github.io/voyager/assets/images/rails.jpg)">
-
+</aside>
 </body>
 </html>
