--- a/index.htm
+++ b/index.htm
@@ -33,21 +33,31 @@
     <main class="content-wrapper">
     <article class="index-page">
     <h2><a>Recent Blog</a></h2>
-    <p>Eat...</p>
-    <p>Sleep...</p>
-    <p>Study...</p>
+    <pre>
+    Eat...
+    Sleep...
+    Study...
+    </pre>
     </article>
     <article class="index-page">
     <h2><a>Welcome to my blog</a></h2>
     <pre>       
-    One word is too often profaned              For me to profane it, 
-    One feeling too falsely distain'd            For thee to distain it; 
-    One hope is too like despair                 For prudence to smother, 
-    And pity from thee more dear                 Than that from another. 
-    I can not give what men call love:           But wilt thou accept not 
-    The worship the heart lifts above            And the heavens reject not,  
-    And the desire of the moth for the star,     Of the nigth for the morrow 
-    The devotion to something afar               From the sphere of our sorrow. 
+    One word is too often profaned              
+        For me to profane it, 
+    One feeling too falsely distain'd            
+        For thee to distain it; 
+    One hope is too like despair                 
+        For prudence to smother, 
+    And pity from thee more dear                 
+        Than that from another. 
+    I can not give what men call love:           
+        But wilt thou accept not 
+    The worship the heart lifts above            
+        And the heavens reject not,  
+    And the desire of the moth for the star,     
+        Of the nigth for the morrow 
+    The devotion to something afar               
+        From the sphere of our sorrow. 
     </pre>
     </article>
     </main>
